feat: restructure examples to blueprint standard, add interactive CLI player, and side-by-side latency benchmark comparing WASAPI to JavaSound